<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBack">

    <Button
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/host_btn"
        android:text="@string/host">
    </Button>

    <Button
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:id="@+id/client_btn"
        android:layout_below="@id/host_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/join">
    </Button>

    <Button
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:id="@+id/p_m_btn"
        android:layout_below="@id/client_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/backWord"
        style="@style/neutral_gray">
    </Button>
</RelativeLayout>