<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBack">

<EditText
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_alignParentTop="true"
    android:layout_marginTop="70dp"
    android:id="@+id/clientToHostIP"
    android:hint="@string/enter_host_ip"
    android:textSize="28sp"
    android:background="@color/colorPrimary"
    />

    <Button
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:id="@+id/client_joinBtn"
        android:layout_below="@id/clientToHostIP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/join"
        style="@style/normal_blue">
    </Button>
    <Button
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:id="@+id/client_backBtn"
        android:layout_below="@id/client_joinBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/backWord"
        style="@style/neutral_gray">
    </Button>
</RelativeLayout>