<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBack">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_loaded"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:textSize="40sp"
        android:id="@+id/IPTextView"
        android:textColor="@color/points"
        />
    <Button
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:id="@+id/m_host_back"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/backWord"
        style="@style/neutral_gray">
    </Button>

    <Button
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:id="@+id/m_host_start"
        android:layout_alignParentBottom="true"
    android:layout_toRightOf="@+id/m_host_back"
        android:layout_alignTop="@id/m_host_back"
        android:layout_marginLeft="30dp"
        android:text="@string/start"
        android:layout_toEndOf="@+id/m_host_back"
        android:enabled="false"
        android:layout_marginStart="30dp"
        style="@style/warn_red">
    </Button>
</RelativeLayout>